--- a/public/front/assets/css/style.css
+++ b/public/front/assets/css/style.css
@@ -489,8 +489,8 @@ h2 {
 --------------------------------------------------------------*/
 #hero {
     width: 100%;
-    height: 95vh;
-    background: url("../img/bg-rsi.jpg") top center;
+    height: 90vh;
+    background: url("../img/bg-rsi.jpg") center;
     background-size: cover;
     margin-bottom: -100px;
 }
