--- a/public/front/assets/css/custom.css
+++ b/public/front/assets/css/custom.css
@@ -44,10 +44,10 @@
     border-top: 1px dotted #eee;
 }
 .line {
-    background-color: #f44336;
+    background-color: #047503;
     width: 100%;
     height: 3px;
-    margin-top: -15px;
+    margin-top: -10px;
     margin-bottom: 10px;
 }
 .span {
